Add section1 partial and load it in index.html
Created src/partials/section1.html with a new section and updated index.html to load this partial using a <load> tag.

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 
     <main>
       <!-- Loads the specified .html file -->
+      <load src="./partials/section1.html" />
     </main>
 
     <script type="module" src="./main.js"></script>
