Add section3 partial and include in index.html
Created a new section3.html partial and updated index.html to load this new section. This adds a new section to the main content of the site.

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <main>
       <!-- Loads the specified .html file -->
       <load src="./partials/section1.html" />
+      <load src="./partials/section3.html" />
     </main>
 
     <script type="module" src="./main.js"></script>
