Add section 4 partial to index.html
Introduces a new section4.html partial and updates index.html to include it. This adds a fourth section to the main content area.

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
       <load src="./partials/section1.html" />
       <load src="./partials/section2.html" />
       <load src="./partials/section3.html" />
+      <load src="./partials/section4.html" />
     </main>
 
     <script type="module" src="./main.js"></script>
