--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
       <load src="./partials/section2.html" />
       <load src="./partials/section3.html" />
       <load src="./partials/section4.html" />
+      <load src="./partials/section5.html" />
     </main>
 
     <script type="module" src="./main.js"></script>
