Remove unused CSS files and update asset paths
Deleted animations.css and container.css as they are no longer used. Updated styles.css to remove imports for these files. Changed relative asset paths to absolute paths in index.html for consistency.

--- a/src/index.html
+++ b/src/index.html
@@ -5,20 +5,20 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Group Project</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header-kravets.html" />
+    <load src="/partials/header-kravets.html" />
 
     <main>
       <!-- Loads the specified .html file -->
-      <load src="./partials/section1.html" />
-      <load src="./partials/section2.html" />
-      <load src="./partials/section3.html" />
-      <load src="./partials/section4.html" />
-      <load src="./partials/section5.html" />
+      <load src="/partials/section1.html" />
+      <load src="/partials/section2.html" />
+      <load src="/partials/section3.html" />
+      <load src="/partials/section4.html" />
+      <load src="/partials/section5.html" />
     </main>
 
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
